@@ -63,7 +63,9 @@ RELEASE NOTES
     the context.
 
     Corrected a bug in the implementation of the predicate_property/2 built-in
-    predicate that allowed access to properties on non-visible predicates.
+    method that allowed access to properties on non-visible predicates. In
+    addition, updated this method to also generate meta-predicate templates
+    for the call/2-N built-in methods.
 
     Added support for the predicate renaming operator as/2 found on SWI-Prolog
     and YAP but only when parsing use_module/2 directives in modules that are
